[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.3"
ppu = { path = "../ppu" }
apu = { path = "../apu" }
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.71"