[package]
name = "soc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.3"
pretty-hex = "0.2.1"
futures = "0.3.17"
memory = { path = "../memory" }
shared = { path = "../shared" }
cpu = { path = "../cpu" }
ppu = { path = "../ppu" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.71"
chrono = "0.4.19"
nfd = "0.0.4"
